优化eureka服务发现

--- a/sop-admin/sop-admin-server/src/main/resources/application-dev.properties
+++ b/sop-admin/sop-admin-server/src/main/resources/application-dev.properties
@@ -17,8 +17,17 @@ admin.access-token.timeout-minutes=30
 sop.sign-type=rsa
 
 # nacos配置
-nacos.config.server-addr=${nacos.url}
-nacos.discovery.server-addr=${nacos.url}
+#nacos.config.server-addr=${nacos.url}
+#nacos.discovery.server-addr=${nacos.url}
+
+# 网关地址，多个用逗号隔开
+# 在不使用nacos时有用，使用nacos时注释掉
+gateway.host=127.0.0.1:8081
+
+# eureka注册中心
+eureka.client.serviceUrl.defaultZone=http://localhost:1111/eureka/
+# 如果使用eureka，填eureka，使用nacos，填eureka
+registry.name=eureka
 
 # 数据库配置
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
