--- a/sop-example/sop-book/sop-book-web/src/main/resources/application-dev.properties
+++ b/sop-example/sop-book/sop-book-web/src/main/resources/application-dev.properties
@@ -2,7 +2,10 @@ server.port=3333
 spring.application.name=book-service
 
 # nacos注册中心
-spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
+#spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
+
+# eureka注册中心
+eureka.client.serviceUrl.defaultZone=http://localhost:1111/eureka/
 
 # consumer不需要检查provider是否启动
 dubbo.consumer.check=false
