--- a/sop-example/sop-story/sop-story-web/src/main/resources/application-dev.properties
+++ b/sop-example/sop-story/sop-story-web/src/main/resources/application-dev.properties
@@ -4,8 +4,10 @@ spring.application.name=story-service
 # 如果有context-path，必须配下面这句
 #spring.cloud.nacos.discovery.metadata.server.servlet.context-path=${server.servlet.context-path}
 # nacos注册中心
-spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
+#spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
 
+# eureka注册中心
+eureka.client.serviceUrl.defaultZone=http://localhost:1111/eureka/
 
 # dubbo配置
 dubbo.protocol.name=dubbo
