--- a/sop-gateway/src/main/resources/application-dev.properties
+++ b/sop-gateway/src/main/resources/application-dev.properties
@@ -37,8 +37,11 @@ ribbon.ReadTimeout=2000
 ribbon.OkToRetryOnAllOperations=false
 
 # nacos cloud配置
-spring.cloud.nacos.discovery.server-addr=${nacos.url}
-nacos.config.server-addr=${nacos.url}
+#spring.cloud.nacos.discovery.server-addr=${nacos.url}
+#nacos.config.server-addr=${nacos.url}
+
+# eureka注册中心
+eureka.client.serviceUrl.defaultZone=http://localhost:1111/eureka/
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://${mysql.host}/sop?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&serverTimezone=Asia/Shanghai
