--- a/sop-admin/sop-admin-server/src/main/resources/application-dev.properties
+++ b/sop-admin/sop-admin-server/src/main/resources/application-dev.properties
@@ -11,7 +11,7 @@ mysql.password=root
 nacos.url=127.0.0.1:8848
 # ------- 需要改的配置end -------
 
-# token过期时间，分钟
+# session过期时间，分钟
 admin.access-token.timeout-minutes=30
 # 签名方式，rsa：支付宝开放平台签名方式，md5：淘宝开放平台签名方式
 sop.sign-type=rsa
