网关二合一

--- a/sop-admin/sop-admin-server/src/main/resources/application-dev.properties
+++ b/sop-admin/sop-admin-server/src/main/resources/application-dev.properties
@@ -38,4 +38,4 @@ mybatis.fill.com.gitee.fastmybatis.core.support.DateFillInsert=gmt_create
 mybatis.fill.com.gitee.fastmybatis.core.support.DateFillUpdate=gmt_modified
 
 # 不用改，如果要改，请全局替换修改
-zuul.secret=MZZOUSTua6LzApIWXCwEgbBmxSzpzC
+sop.secret=MZZOUSTua6LzApIWXCwEgbBmxSzpzC
