--- a/sop-common/pom.xml
+++ b/sop-common/pom.xml
@@ -134,6 +134,14 @@
 		</dependency>
 	</dependencies>
 
+	<repositories>
+		<repository>
+			<id>spring-milestones</id>
+			<name>Spring Milestones</name>
+			<url>https://repo.spring.io/milestone</url>
+		</repository>
+	</repositories>
+
 	<build>
 		<plugins>
 			<!-- 打包时跳过测试 -->
