--- a/sop-gateway/pom.xml
+++ b/sop-gateway/pom.xml
@@ -26,11 +26,13 @@
     </properties>
 
     <dependencies>
+        <!--
+            <artifactId>sop-bridge-zuul</artifactId>    : spring cloud gateway作为网关
+            <artifactId>sop-bridge-gateway</artifactId> : spring cloud zuul作为网关
+        -->
          <dependency>
             <groupId>com.gitee.sop</groupId>
-             <!-- 使用zuul作为网关 -->
              <!--<artifactId>sop-bridge-zuul</artifactId>-->
-             <!-- 使用spring cloud gateway作为网关 -->
              <artifactId>sop-bridge-gateway</artifactId>
             <version>2.6.0-SNAPSHOT</version>
         </dependency>
