--- a/sop-common/sop-bridge-gateway/src/main/resources/sop-bridge.properties
+++ b/sop-common/sop-bridge-gateway/src/main/resources/sop-bridge.properties
@@ -1,5 +1,16 @@
+# 固定不变，不能改
+spring.application.name=sop-gateway
 # 不用改，如果要改，请全局替换修改
 sop.secret=MZZOUSTua6LzApIWXCwEgbBmxSzpzC
+
+# nacos cloud配置
+spring.cloud.nacos.discovery.server-addr=${nacos.url}
+
+# 数据库配置
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://${mysql.host}/sop?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&serverTimezone=Asia/Shanghai
+spring.datasource.username=${mysql.username}
+spring.datasource.password=${mysql.password}
 
 # https://blog.csdn.net/qq_36872046/article/details/81058045
 # 路由转发超时时间，毫秒，默认值1000，详见：RibbonClientConfiguration.DEFAULT_READ_TIMEOUT。
