--- a/sop-gateway/src/main/resources/application-dev.properties
+++ b/sop-gateway/src/main/resources/application-dev.properties
@@ -1,24 +1,11 @@
 server.port=8081
-# 固定不变，不能改
-spring.application.name=sop-gateway
 
-# ------- 需要改的配置 -------
-# mysql数据库账号
+# mysql数据库配置
 mysql.host=localhost:3306
 mysql.username=root
 mysql.password=root
 
 # nacos地址
 nacos.url=127.0.0.1:8848
-# ------- 需要改的配置end -------
-
-# nacos cloud配置
-spring.cloud.nacos.discovery.server-addr=${nacos.url}
-
-# 数据库配置
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://${mysql.host}/sop?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&serverTimezone=Asia/Shanghai
-spring.datasource.username=${mysql.username}
-spring.datasource.password=${mysql.password}
 
 logging.level.com.gitee=debug
