--- a/sop-common/sop-bridge-gateway/src/main/resources/sop-bridge.properties
+++ b/sop-common/sop-bridge-gateway/src/main/resources/sop-bridge.properties
@@ -3,6 +3,9 @@ spring.application.name=sop-gateway
 # 不用改，如果要改，请全局替换修改
 sop.secret=MZZOUSTua6LzApIWXCwEgbBmxSzpzC
 
+# 网关入口
+gateway.index-path=/
+
 # nacos cloud配置
 spring.cloud.nacos.discovery.server-addr=${nacos.url}
 
