重构预发布/灰度发布环境选择

--- a/sop-common/sop-bridge-gateway/src/main/resources/sop-bridge.properties
+++ b/sop-common/sop-bridge-gateway/src/main/resources/sop-bridge.properties
@@ -4,7 +4,9 @@ spring.application.name=sop-gateway
 sop.secret=MZZOUSTua6LzApIWXCwEgbBmxSzpzC
 
 # 网关入口
-gateway.index-path=/
+sop.gateway-index-path=/
+
+spring.main.allow-bean-definition-overriding=true
 
 # nacos cloud配置
 spring.cloud.nacos.discovery.server-addr=${nacos.url}
