--- a/sop-common/sop-bridge-zuul/src/main/resources/sop-bridge.properties
+++ b/sop-common/sop-bridge-zuul/src/main/resources/sop-bridge.properties
@@ -8,6 +8,11 @@ zuul.Servlet30WrapperFilter.pre.disable=true
 # 不用改，如果要改，请全局替换修改
 sop.secret=MZZOUSTua6LzApIWXCwEgbBmxSzpzC
 
+# zuul优化配置
+zuul.host.max-per-route-connections=1000
+zuul.host.max-total-connections=1000
+zuul.semaphore.max-semaphores=1000
+
 # nacos cloud配置
 spring.cloud.nacos.discovery.server-addr=${nacos.url}
 
