--- a/sop-website/src/main/resources/application-dev.properties
+++ b/sop-website/src/main/resources/application-dev.properties
@@ -2,16 +2,15 @@ server.port=8083
 spring.application.name=sop-website
 
 # ------- 需要改的配置 -------
-# nacos地址
-nacos.url=127.0.0.1:8848
-
 # 网关内网地址
 # ！！沙箱环境是提供给外部的测试环境，不能把正式环境当做沙箱环境来使用。
 gateway.url=http://localhost:8081
 # ------- 需要改的配置end -------
 
-## nacos cloud配置
-spring.cloud.nacos.discovery.server-addr=${nacos.url}
+# eureka注册中心
+eureka.client.serviceUrl.defaultZone=http://localhost:1111/eureka/
+# 如果使用eureka，填eureka，使用nacos，填eureka
+registry.name=eureka
 
 # 页面上显示的测试环境地址
 api.url-test=http://open-test.yourdomain.com
