--- a/sop-auth/src/main/resources/application-dev.properties
+++ b/sop-auth/src/main/resources/application-dev.properties
@@ -7,13 +7,9 @@ mysql.host=localhost:3306
 mysql.username=root
 mysql.password=root
 
-# nacos地址
-nacos.url=127.0.0.1:8848
-
+# eureka注册中心
+eureka.client.serviceUrl.defaultZone=http://localhost:1111/eureka/
 # ------- 需要改的配置end -------
-
-# nacos cloud配置
-spring.cloud.nacos.discovery.server-addr=${nacos.url}
 
 # 数据库配置
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
