--- a/sop-example/sop-easyopen/src/main/resources/application-dev.properties
+++ b/sop-example/sop-easyopen/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 server.port=2121
 spring.application.name=easyopen-service
 
-# nacos注册中心
-spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
+# eureka注册中心
+eureka.client.serviceUrl.defaultZone=http://localhost:1111/eureka/
 
 easyopen.prefix-path=/api
