--- a/sop-example/sop-easyopen/pom.xml
+++ b/sop-example/sop-easyopen/pom.xml
@@ -35,7 +35,7 @@
 		<!-- 使用nacos注册中心
             版本 0.2.x.RELEASE 对应的是 Spring Boot 2.x 版本，版本 0.1.x.RELEASE 对应的是 Spring Boot 1.x 版本。
            https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-alibaba-nacos-discovery
-        -->
+
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
@@ -52,11 +52,17 @@
 			<artifactId>nacos-client</artifactId>
 			<version>1.1.0</version>
 		</dependency>
+		-->
+
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>net.oschina.durcframework</groupId>
 			<artifactId>easyopen</artifactId>
-			<version>1.16.1</version>
+			<version>1.16.8</version>
 		</dependency>
         <!-- sop接入依赖 end -->
 
