--- a/sop-admin/sop-admin-server/src/main/resources/META-INF/sop-admin.properties
+++ b/sop-admin/sop-admin-server/src/main/resources/META-INF/sop-admin.properties
@@ -7,7 +7,7 @@ spring.application.name=sop-admin
 # session过期时间，分钟
 admin.access-token.timeout-minutes=30
 # 签名方式，rsa：支付宝开放平台签名方式，md5：淘宝开放平台签名方式
-sop.sign-type=rsa
+sop.sign-type=md5
 
 # nacos配置
 nacos.config.server-addr=${nacos.url}
