--- a/sop-common/sop-gateway-common/pom.xml
+++ b/sop-common/sop-gateway-common/pom.xml
@@ -1,19 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>com.gitee.sop</groupId>
-        <artifactId>sop-common</artifactId>
-        <version>3.2.0-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
+        <artifactId>sop-parent</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+        <relativePath>../../pom.xml</relativePath> <!-- lookup parent from repository -->
     </parent>
+
+    <modelVersion>4.0.0</modelVersion>
     <artifactId>sop-gateway-common</artifactId>
     <version>3.2.0-SNAPSHOT</version>
     <packaging>jar</packaging>
-
-    <name>sop-gateway-common</name>
-    <description>sop-gateway-common</description>
 
     <properties>
         <java.version>1.8</java.version>
@@ -23,7 +22,6 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>27.1-jre</version>
         </dependency>
 
         <dependency>
