--- a/sop-example/sop-story/src/main/resources/application-dev.properties
+++ b/sop-example/sop-story/src/main/resources/application-dev.properties
@@ -1,10 +1,10 @@
 server.port=2222
 spring.application.name=story-service
-#server.servlet.context-path=/story-service
-# 如果有context-path，必须配下面这句
-#spring.cloud.nacos.discovery.metadata.server.servlet.context-path=${server.servlet.context-path}
-# nacos注册中心
-spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
+
+# eureka注册中心
+eureka.client.serviceUrl.defaultZone=http://localhost:1111/eureka/
+# 如果使用eureka，填eureka，使用nacos，填eureka
+registry.name=eureka
 
 # zipkin服务跟踪
 #spring.zipkin.base-url=http://127.0.0.1:9411/
