--- a/sop-auth/pom.xml
+++ b/sop-auth/pom.xml
@@ -29,10 +29,9 @@
 		</dependency>
 		<!-- sop相关配置 end-->
 
-		<!-- 使用nacos注册中心 -->
 		<dependency>
-			<groupId>com.alibaba.cloud</groupId>
-			<artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
 
 		<dependency>
