--- a/sop-admin/sop-admin-server/src/main/resources/META-INF/sop-admin.properties
+++ b/sop-admin/sop-admin-server/src/main/resources/META-INF/sop-admin.properties
@@ -12,6 +12,8 @@ sop.sign-type=rsa
 # nacos配置
 nacos.config.server-addr=${nacos.url}
 nacos.discovery.server-addr=${nacos.url}
+# nacos cloud配置
+spring.cloud.nacos.discovery.server-addr=${nacos.url}
 
 # 数据库配置
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
