--- a/sop-gateway/src/main/resources/application-dev.properties
+++ b/sop-gateway/src/main/resources/application-dev.properties
@@ -5,8 +5,7 @@ mysql.host=localhost:3306
 mysql.username=root
 mysql.password=root
 
-# 注册中心地址
+# nacos注册中心地址
 register.url=127.0.0.1:8848
-#register.url=http://localhost:1111/eureka/
 
 logging.level.com.gitee=debug
