--- a/sop-admin/sop-admin-server/src/main/resources/META-INF/sop-admin.properties
+++ b/sop-admin/sop-admin-server/src/main/resources/META-INF/sop-admin.properties
@@ -13,6 +13,8 @@ sop.sign-type=rsa
 nacos.config.server-addr=${register.url}
 nacos.discovery.server-addr=${register.url}
 
+registry.name=eureka
+
 # nacos cloud配置
 spring.cloud.nacos.discovery.server-addr=${register.url}
 
