--- a/sop-auth/src/main/resources/application-dev.properties
+++ b/sop-auth/src/main/resources/application-dev.properties
@@ -7,13 +7,13 @@ mysql.host=localhost:3306
 mysql.username=root
 mysql.password=root
 
-# nacos地址
-register.url=127.0.0.1:8848
+# 注册中心地址
+register.url=http://localhost:1111/eureka/
 
 # ------- 需要改的配置end -------
 
-# nacos cloud配置
-spring.cloud.nacos.discovery.server-addr=${register.url}
+# eureka地址
+eureka.client.serviceUrl.defaultZone=${register.url}
 
 # 数据库配置
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
