--- a/sop-website/src/main/resources/application-dev.properties
+++ b/sop-website/src/main/resources/application-dev.properties
@@ -3,7 +3,7 @@ spring.application.name=sop-website
 
 # ------- 需要改的配置 -------
 # 注册中心地址
-register.url=127.0.0.1:8848
+register.url=http://localhost:1111/eureka/
 
 # 网关内网地址
 # ！！沙箱环境是提供给外部的测试环境，不能把正式环境当做沙箱环境来使用。
