--- a/sop-admin/sop-admin-server/src/main/resources/application-dev.properties
+++ b/sop-admin/sop-admin-server/src/main/resources/application-dev.properties
@@ -6,6 +6,6 @@ mysql.username=root
 mysql.password=root
 
 # 注册中心地址
-register.url=127.0.0.1:8848
+register.url=http://localhost:1111/eureka/
 
 logging.level.com.gitee=debug
