--- a/sop-gateway/pom.xml
+++ b/sop-gateway/pom.xml
@@ -22,8 +22,8 @@
         -->
          <dependency>
             <groupId>com.gitee.sop</groupId>
-             <artifactId>sop-bridge-nacos</artifactId>
-<!--             <artifactId>sop-bridge-eureka</artifactId>-->
+<!--             <artifactId>sop-bridge-nacos</artifactId>-->
+             <artifactId>sop-bridge-eureka</artifactId>
             <version>4.0.0-SNAPSHOT</version>
         </dependency>
 
