--- a/sop-website/pom.xml
+++ b/sop-website/pom.xml
@@ -23,8 +23,8 @@
         -->
         <dependency>
             <groupId>com.gitee.sop</groupId>
-            <artifactId>sop-bridge-nacos</artifactId>
-            <!--<artifactId>sop-bridge-eureka</artifactId>-->
+<!--            <artifactId>sop-bridge-nacos</artifactId>-->
+            <artifactId>sop-bridge-eureka</artifactId>
             <version>4.0.0-SNAPSHOT</version>
         </dependency>
 
