--- a/sop-gateway/src/main/resources/META-INF/gateway.properties
+++ b/sop-gateway/src/main/resources/META-INF/gateway.properties
@@ -26,6 +26,9 @@ spring.cloud.gateway.discovery.locator.enabled=true
 mybatis.fill.com.gitee.fastmybatis.core.support.DateFillInsert=gmt_create
 mybatis.fill.com.gitee.fastmybatis.core.support.DateFillUpdate=gmt_modified
 
+# POST请求最大缓存512KB
+spring.codec.max-in-memory-size=524288
+
 # 文件上传配置
 spring.servlet.multipart.enabled=true
 # 这里设置大一点没关系，真实大小由upload.max-file-size控制
