--- a/sop-gateway/src/main/resources/META-INF/gateway.properties
+++ b/sop-gateway/src/main/resources/META-INF/gateway.properties
@@ -26,8 +26,9 @@ spring.cloud.gateway.discovery.locator.enabled=true
 mybatis.fill.com.gitee.fastmybatis.core.support.DateFillInsert=gmt_create
 mybatis.fill.com.gitee.fastmybatis.core.support.DateFillUpdate=gmt_modified
 
-# POST请求最大缓存512KB
-spring.codec.max-in-memory-size=524288
+# POST请求最大缓存，默认是256KB，即：262144
+# 如果需要传输大文本可以把值设置高一点
+spring.codec.max-in-memory-size=262144
 
 # 文件上传配置
 spring.servlet.multipart.enabled=true
