--- a/sop-common/sop-bridge-gateway/src/main/resources/sop-bridge.properties
+++ b/sop-common/sop-bridge-gateway/src/main/resources/sop-bridge.properties
@@ -11,7 +11,7 @@ spring.cloud.nacos.discovery.server-addr=${nacos.url}
 
 # 数据库配置
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://${mysql.host}/sop?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&serverTimezone=Asia/Shanghai
+spring.datasource.url=jdbc:mysql://${mysql.host}/sop3?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&serverTimezone=Asia/Shanghai
 spring.datasource.username=${mysql.username}
 spring.datasource.password=${mysql.password}
 
