--- a/sop-website/src/main/resources/application-dev.properties
+++ b/sop-website/src/main/resources/application-dev.properties
@@ -10,8 +10,7 @@ register.url=http://localhost:1111/eureka/
 gateway.url=http://localhost:8081
 # ------- 需要改的配置end -------
 
-## nacos cloud配置
-spring.cloud.nacos.discovery.server-addr=${register.url}
+eureka.client.serviceUrl.defaultZone=${register.url}
 
 # 页面上显示的测试环境地址
 api.url-test=http://open-test.yourdomain.com
