--- a/sop-gateway/src/main/docker/dockerfile
+++ b/sop-gateway/src/main/docker/dockerfile
@@ -1,4 +1,6 @@
 FROM java:8
 VOLUME /tmp
+VOLUME /log
 ADD sop-gateway-4.0.3-SNAPSHOT.jar sop-gateway-4.0.3.jar
-ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/sop-gateway-4.0.3.jar"]
+
+ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom --logging.file=log/sop-gateway/log.log","-jar","/sop-gateway-4.0.3.jar"]
