--- a/sop-gateway/src/main/resources/META-INF/gateway.properties
+++ b/sop-gateway/src/main/resources/META-INF/gateway.properties
@@ -18,6 +18,9 @@ spring.datasource.url=jdbc:mysql://${mysql.host}/sop?useUnicode=true&characterEn
 spring.datasource.username=${mysql.username}
 spring.datasource.password=${mysql.password}
 
+#连接池
+spring.datasource.hikari.pool-name=DatebookHikariCP
+spring.datasource.hikari.max-lifetime=500000
 
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 spring.cloud.gateway.discovery.locator.enabled=true
