--- a/sop-gateway/src/main/resources/META-INF/gateway.properties
+++ b/sop-gateway/src/main/resources/META-INF/gateway.properties
@@ -6,6 +6,9 @@ sop.secret=MZZOUSTua6LzApIWXCwEgbBmxSzpzC
 # 网关入口
 sop.gateway-index-path=/
 
+# 开启restful请求，默认开启
+sop.restful.enable=true
+
 # nacos cloud配置
 spring.cloud.nacos.discovery.server-addr=${register.url}
 
