--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.2.5.RELEASE</version>
+		<version>2.3.4.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
@@ -36,17 +36,17 @@
 		<maven.compiler.target>1.8</maven.compiler.target>
 
 		<!-- springboot 版本-->
-		<spring-boot.version>2.2.5.RELEASE</spring-boot.version>
+		<spring-boot.version>2.3.4.RELEASE</spring-boot.version>
 		<!-- spring cloud 版本 -->
-		<spring-cloud.version>Hoxton.SR3</spring-cloud.version>
+		<spring-cloud.version>Hoxton.SR8</spring-cloud.version>
 		<!-- spring cloud alibaba 版本 -->
 		<!-- 具体版本对应关系见：https://github.com/alibaba/spring-cloud-alibaba/wiki/%E7%89%88%E6%9C%AC%E8%AF%B4%E6%98%8E -->
-		<spring-cloud-alibaba.version>2.2.1.RELEASE</spring-cloud-alibaba.version>
+		<spring-cloud-alibaba.version>2.2.3.RELEASE</spring-cloud-alibaba.version>
 
 
 		<!-- Logging -->
 		<logback.version>1.2.3</logback.version>
-		<slf4j.version>1.7.5</slf4j.version>
+<!--		<slf4j.version>1.7.5</slf4j.version>-->
 
 		<!-- Test -->
 		<junit.version>4.11</junit.version>
@@ -58,11 +58,11 @@
 		<commons-lang3.version>3.8.1</commons-lang3.version>
 		<commons-codec.version>1.11</commons-codec.version>
 		<commons-logging.version>1.2</commons-logging.version>
-		<validation-api.version>2.0.1.Final</validation-api.version>
-		<hibernate-validator.version>6.0.13.Final</hibernate-validator.version>
+<!--		<validation-api.version>2.0.1.Final</validation-api.version>-->
+<!--		<hibernate-validator.version>6.0.13.Final</hibernate-validator.version>-->
 		<fastmybatis.version>1.9.1</fastmybatis.version>
 		<spring-data-redis.version>2.3.0.RELEASE</spring-data-redis.version>
-		<guava.version>27.1-jre</guava.version>
+		<guava.version>29.0-jre</guava.version>
 		<swagger.version>1.5.21</swagger.version>
 		<springfox-spring-web.version>2.9.2</springfox-spring-web.version>
 		<springfox-swagger2.version>2.9.2</springfox-swagger2.version>
