--- a/sop-admin/sop-admin-server/src/main/resources/META-INF/sop-admin.properties
+++ b/sop-admin/sop-admin-server/src/main/resources/META-INF/sop-admin.properties
@@ -30,6 +30,7 @@ spring.datasource.hikari.pool-name=HikariCP
 spring.datasource.hikari.max-lifetime=500000
 
 # 固定不用改
+mybatis.config-location=classpath:mybatis/mybatisConfig.xml
 mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
 easyopen.show-doc=false
 easyopen.ignore-validate=true
