--- a/sop-admin/sop-admin-server/pom.xml
+++ b/sop-admin/sop-admin-server/pom.xml
@@ -21,11 +21,6 @@
 	</properties>
 
 	<dependencies>
-		<dependency>
-			<groupId>com.gitee.sop</groupId>
-			<artifactId>sop-bridge-nacos</artifactId>
-			<version>4.0.3-SNAPSHOT</version>
-		</dependency>
 
 		<!-- easyopen starter -->
 		<dependency>
@@ -62,6 +57,11 @@
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>com.github.pagehelper</groupId>
+			<artifactId>pagehelper</artifactId>
 		</dependency>
 
 		<!-- optional-->
