--- a/sop-gateway/src/main/resources/META-INF/gateway.properties
+++ b/sop-gateway/src/main/resources/META-INF/gateway.properties
@@ -29,6 +29,7 @@ spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 spring.cloud.gateway.discovery.locator.enabled=true
 
 # 不用改
+mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
 mybatis.fill.com.gitee.fastmybatis.core.support.DateFillInsert=gmt_create
 mybatis.fill.com.gitee.fastmybatis.core.support.DateFillUpdate=gmt_modified
 
