--- a/sop-website/sop-website-server/src/main/resources/application-dev.properties
+++ b/sop-website/sop-website-server/src/main/resources/application-dev.properties
@@ -8,7 +8,7 @@ mysql.host=localhost:3306
 mysql.username=root
 mysql.password=root
 # 注册中心地址
-register.url=127.0.0.1:8848
+register.url=http://localhost:1111/eureka/
 
 # 网关内网地址
 # ！！沙箱环境是提供给外部的测试环境，不能把正式环境当做沙箱环境来使用。
@@ -17,8 +17,7 @@ gateway.url=http://localhost:8081
 logging.level.com.gitee=debug
 # ------- 需要改的配置end -------
 
-## nacos cloud配置
-spring.cloud.nacos.discovery.server-addr=${register.url}
+eureka.client.serviceUrl.defaultZone=${register.url}
 
 # 页面上显示的测试环境地址
 api.url-test=http://open-test.yourdomain.com
