--- a/sop-website/sop-website-server/pom.xml
+++ b/sop-website/sop-website-server/pom.xml
@@ -23,8 +23,8 @@
         -->
         <dependency>
             <groupId>com.gitee.sop</groupId>
-            <artifactId>sop-bridge-nacos</artifactId>
-            <!--<artifactId>sop-bridge-eureka</artifactId>-->
+<!--            <artifactId>sop-bridge-nacos</artifactId>-->
+            <artifactId>sop-bridge-eureka</artifactId>
             <version>4.2.0-SNAPSHOT</version>
         </dependency>
 
@@ -71,6 +71,13 @@
         </dependency>
 
         <dependency>
+            <groupId>com.alibaba.nacos</groupId>
+            <artifactId>nacos-api</artifactId>
+            <version>1.3.3</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.18.4</version>
@@ -82,7 +89,6 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-
 
     </dependencies>
 
