--- a/sop-website/sop-website-server/pom.xml
+++ b/sop-website/sop-website-server/pom.xml
@@ -4,7 +4,7 @@
 
     <parent>
         <groupId>com.gitee.sop</groupId>
-        <artifactId>sop-parent</artifactId>
+        <artifactId>sop-website</artifactId>
         <version>4.2.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath> <!-- lookup parent from repository -->
     </parent>
