--- a/sop-admin/sop-admin-vue/.env.development
+++ b/sop-admin/sop-admin-vue/.env.development
@@ -1,8 +1,8 @@
 # just a flag
 ENV = 'development'
 
-# base api
-VUE_APP_BASE_API = 'http://localhost:8082/api'
+# base api，末尾没有/
+VUE_APP_BASE_API = 'http://localhost:8082'
 
 # vue-cli uses the VUE_CLI_BABEL_TRANSPILE_MODULES environment variable,
 # to control whether the babel-plugin-dynamic-import-node plugin is enabled.
