--- a/sop-admin/sop-admin-vue/.env.production
+++ b/sop-admin/sop-admin-vue/.env.production
@@ -1,6 +1,8 @@
 # just a flag
 ENV = 'production'
 
-# base api
-VUE_APP_BASE_API = '/api'
+# base api，
+# 如果要前后端分离，这里填 http(s)://ip:port  末尾没有/
+# 如：http://www.aaa.com, http://www.bbb.com:7777
+VUE_APP_BASE_API = ''
 
