--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.3.4.RELEASE</version>
+		<version>2.1.4.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
@@ -36,12 +36,12 @@
 		<maven.compiler.target>1.8</maven.compiler.target>
 
 		<!-- springboot 版本-->
-		<spring-boot.version>2.3.4.RELEASE</spring-boot.version>
+		<spring-boot.version>2.1.8.RELEASE</spring-boot.version>
 		<!-- spring cloud 版本 -->
-		<spring-cloud.version>Hoxton.SR8</spring-cloud.version>
+		<spring-cloud.version>Greenwich.SR6</spring-cloud.version>
 		<!-- spring cloud alibaba 版本 -->
 		<!-- 具体版本对应关系见：https://github.com/alibaba/spring-cloud-alibaba/wiki/%E7%89%88%E6%9C%AC%E8%AF%B4%E6%98%8E -->
-		<spring-cloud-alibaba.version>2.2.3.RELEASE</spring-cloud-alibaba.version>
+		<spring-cloud-alibaba.version>2.1.2.RELEASE</spring-cloud-alibaba.version>
 
 
 		<!-- Logging -->
@@ -133,6 +133,12 @@
 				<groupId>net.oschina.durcframework</groupId>
 				<artifactId>easyopen</artifactId>
 				<version>${easyopen.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>com.squareup.okhttp3</groupId>
+				<artifactId>okhttp</artifactId>
+				<version>3.14.7</version>
 			</dependency>
 
 			<dependency>
