--- a/sop-gateway/src/main/resources/application-dev.properties
+++ b/sop-gateway/src/main/resources/application-dev.properties
@@ -9,4 +9,7 @@ mysql.password=root
 # nacos注册中心地址
 register.url=127.0.0.1:8848
 
+# 上传文件最大容量，默认10MB
+spring.servlet.multipart.max-file-size=10MB
+
 logging.level.com.gitee=debug
