修复restful负载均衡问题

--- a/sop-example/sop-story/src/main/resources/application-dev.properties
+++ b/sop-example/sop-story/src/main/resources/application-dev.properties
@@ -1,6 +1,9 @@
 server.port=2222
 spring.application.name=story-service
 register.url=127.0.0.1:8848
-# 注册中心
+# \u6CE8\u518C\u4E2D\u5FC3
 spring.cloud.nacos.discovery.server-addr=${register.url}
 
+# \u4E0A\u4F20\u6587\u4EF6\u6700\u5927\u503C
+spring.servlet.multipart.max-file-size=20MB
+spring.servlet.multipart.max-request-size=20MB
