--- a/sop-admin/sop-admin-server/pom.xml
+++ b/sop-admin/sop-admin-server/pom.xml
@@ -5,13 +5,13 @@
 	<parent>
 		<groupId>com.gitee.sop</groupId>
 		<artifactId>sop-parent</artifactId>
-		<version>4.2.5-SNAPSHOT</version>
+		<version>${revision}</version>
 		<relativePath>../../pom.xml</relativePath> <!-- lookup parent from repository -->
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>sop-admin-server</artifactId>
-	<version>4.2.5-SNAPSHOT</version>
+	<version>${revision}</version>
 	<packaging>jar</packaging>
 
 	<properties>
