--- a/sop-common/pom.xml
+++ b/sop-common/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.gitee.sop</groupId>
 		<artifactId>sop-parent</artifactId>
-		<version>4.2.5-SNAPSHOT</version>
+		<version>${revision}</version>
 		<relativePath>../pom.xml</relativePath> <!-- lookup parent from repository -->
 	</parent>
 
