--- a/sop-example/sop-story/pom.xml
+++ b/sop-example/sop-story/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.gitee.sop</groupId>
         <artifactId>sop-parent</artifactId>
-        <version>4.2.5-SNAPSHOT</version>
+        <version>${revision}</version>
         <relativePath>../../pom.xml</relativePath> <!-- lookup parent from repository -->
     </parent>
 
@@ -19,7 +19,7 @@
         <dependency>
             <groupId>com.gitee.sop</groupId>
             <artifactId>sop-service-common</artifactId>
-            <version>4.2.5-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
 
         <dependency>
