--- a/sop-gateway/pom.xml
+++ b/sop-gateway/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.gitee.sop</groupId>
         <artifactId>sop-parent</artifactId>
-        <version>4.2.5-SNAPSHOT</version>
+        <version>${revision}</version>
         <relativePath>../pom.xml</relativePath> <!-- lookup parent from repository -->
     </parent>
 
@@ -24,7 +24,7 @@
             <groupId>com.gitee.sop</groupId>
              <artifactId>sop-bridge-nacos</artifactId>
 <!--             <artifactId>sop-bridge-eureka</artifactId>-->
-            <version>4.2.5-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
 
         <dependency>
