--- a/sop-sdk/sdk-java/pom.xml
+++ b/sop-sdk/sdk-java/pom.xml
@@ -4,13 +4,13 @@
 	<parent>
 		<groupId>com.gitee.sop</groupId>
 		<artifactId>sop-parent</artifactId>
-		<version>4.2.5-SNAPSHOT</version>
+		<version>${revision}</version>
 		<relativePath>../../pom.xml</relativePath> <!-- lookup parent from repository -->
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>sdk-java</artifactId>
-	<version>4.2.5-SNAPSHOT</version>
+	<version>${revision}</version>
 
 	<properties>
 		<!-- Generic properties -->
