--- a/sop-website/sop-website-server/pom.xml
+++ b/sop-website/sop-website-server/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.gitee.sop</groupId>
         <artifactId>sop-website</artifactId>
-        <version>4.2.5-SNAPSHOT</version>
+        <version>${revision}</version>
         <relativePath>../pom.xml</relativePath> <!-- lookup parent from repository -->
     </parent>
 
@@ -25,7 +25,7 @@
             <groupId>com.gitee.sop</groupId>
             <artifactId>sop-bridge-nacos</artifactId>
             <!--<artifactId>sop-bridge-eureka</artifactId>-->
-            <version>4.2.5-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
 
         <dependency>
