--- a/sop-gateway/src/main/resources/META-INF/gateway.properties
+++ b/sop-gateway/src/main/resources/META-INF/gateway.properties
@@ -6,6 +6,8 @@ sop.secret=MZZOUSTua6LzApIWXCwEgbBmxSzpzC
 # \u6587\u4EF6\u4E0A\u4F20\u914D\u7F6E
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
+# \u4E0D\u9650\u5236gateway\u8BF7\u6C42\u4F53\u5927\u5C0F
+spring.codec.max-in-memory-size=-1
 
 # \u7F51\u5173\u5165\u53E3
 sop.gateway-index-path=/
